# src_platform_tpm-cmd

./: AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lib/tlcl/: tlcl.c
src/: CMakeLists.txt  common.h  compatibility.h  sha1.c  tpm_cmd.c
